--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -3,12 +3,12 @@
   <div class="container">
     <section class="footer-bottom border-top row">
       <div class="col-md-2">
-        <p class="text-muted">&copy 2019 Company name</p>
+        <p class="text-muted">&copy 2022 SERNPROJECTS</p>
       </div>
       <div class="col-md-8 text-md-center">
-        <span class="px-2">info@pixsellz.io</span>
-        <span class="px-2">+879-332-9375</span>
-        <span class="px-2">Street name 123, Avanue abc</span>
+        <span class="px-2">mkdbaah@gmail.com</span>
+        <span class="px-2">0244639729</span>
+        <span class="px-2">Call me for your websites, web apps and mobile apps</span>
       </div>
       <div class="col-md-2 text-md-right text-muted">
         <i class="fab fa-lg fa-cc-visa"></i>
