--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -4,12 +4,13 @@
 <section class="section-content padding-y bg">
   <div class="container">
     <!-- ============================ COMPONENT 1 ================================= -->
-    <div class="row">
-      <aside class="col-lg-6">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title mb-4">Billing Address</h4>
-            <form action="" method="POST">
+    <form action="" method="POST">
+      {% csrf_token %}
+      <div class="row">
+        <aside class="col-lg-6">
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title mb-4">Billing Address</h4>
               <div class="form-row">
                 <div class="col form-group">
                   <label for="">First Name</label>
@@ -62,67 +63,67 @@
                 <label for="">Order Note</label>
                 <textarea class="form-control" name="order_note" rows="2"></textarea>
               </div>
-            </form>
+            </div>
           </div>
-        </div>
-        <!-- card.// -->
-      </aside>
-      <!-- col.// -->
-      <aside class="col-lg-6">
-        <div class="card">
-          <div class="card-body">
-            <table class="table table-borderless table-shopping-cart">
-              <thead class="text-muted">
-                <tr class="small text-uppercase">
-                  <th scope="col">Product</th>
-                  <th scope="col" width="120">Quantity</th>
-                  <th scope="col" width="120">Price</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for cart_item in cart_items %}
-                <tr>
-                  <td>
-                    <figure class="itemside align-items-center">
-                      <div class="aside"><img src="{{cart_item.product.images.url}}" class="img-sm" /></div>
-                      <figcaption class="info">
-                        <a href="{{ cart_item.product.get_url  }}" class="title text-dark">{{ cart_item.product.product_name }}</a>
-                        <p class="text-muted small">
-                          {% if cart_item.variations.all %}
-                          <!--  -->
-                          {% for item in cart_item.variations.all %} {{ item.variation_category | capfirst }}: {{ item.variation_value | capfirst }}
-                          <br />
-                          {% endfor %}
-                          <!--  -->
-                          {% endif %}
-                        </p>
-                      </figcaption>
-                    </figure>
-                  </td>
-                  <td>
-                    <label for="">{{ cart_item.quantity }}</label>
-                  </td>
-                  <td>
-                    <div class="price-wrap">
-                      <var class="price">${{ cart_item.sub_total }}</var>
-                      <small class="text-muted"> ${{ cart_item.product.price }} each </small>
-                    </div>
-                    <!-- price-wrap .// -->
-                  </td>
-                </tr>
-                {% endfor %}
-              </tbody>
-            </table>
-            <a href="./place-order.html" class="btn btn-primary btn-block"> Place Order </a>
-            <a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
+          <!-- card.// -->
+        </aside>
+        <!-- col.// -->
+        <aside class="col-lg-6">
+          <div class="card">
+            <div class="card-body">
+              <table class="table table-borderless table-shopping-cart">
+                <thead class="text-muted">
+                  <tr class="small text-uppercase">
+                    <th scope="col">Product</th>
+                    <th scope="col" width="120">Quantity</th>
+                    <th scope="col" width="120">Price</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for cart_item in cart_items %}
+                  <tr>
+                    <td>
+                      <figure class="itemside align-items-center">
+                        <div class="aside"><img src="{{cart_item.product.images.url}}" class="img-sm" /></div>
+                        <figcaption class="info">
+                          <a href="{{ cart_item.product.get_url  }}" class="title text-dark">{{ cart_item.product.product_name }}</a>
+                          <p class="text-muted small">
+                            {% if cart_item.variations.all %}
+                            <!--  -->
+                            {% for item in cart_item.variations.all %} {{ item.variation_category | capfirst }}: {{ item.variation_value | capfirst }}
+                            <br />
+                            {% endfor %}
+                            <!--  -->
+                            {% endif %}
+                          </p>
+                        </figcaption>
+                      </figure>
+                    </td>
+                    <td>
+                      <label for="">{{ cart_item.quantity }}</label>
+                    </td>
+                    <td>
+                      <div class="price-wrap">
+                        <var class="price">${{ cart_item.sub_total }}</var>
+                        <small class="text-muted"> ${{ cart_item.product.price }} each </small>
+                      </div>
+                      <!-- price-wrap .// -->
+                    </td>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+              <button type="submit" class="btn btn-primary btn-block">Place Order</button>
+              <a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
+            </div>
+            <!-- card-body.// -->
           </div>
-          <!-- card-body.// -->
-        </div>
-        <!-- card.// -->
-      </aside>
-      <!-- col.// -->
-    </div>
-    <!-- row.// -->
+          <!-- card.// -->
+        </aside>
+        <!-- col.// -->
+      </div>
+      <!-- row.// -->
+    </form>
     <!-- ============================ COMPONENT 1 END .// ================================= -->
   </div>
   <!-- container .//  -->
