--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,8 @@
 
     <!-- custom javascript -->
     <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
+    <!-- Paypal script -->
+    <script src="https://www.paypal.com/sdk/js?client-id=AVRdcEmpbrfoyFt21VNZYMXFkcWHtQv6LeQ0mxdyih6pV0TfyLsiFy3FGbaGWlU8OJDMN7arT5EuuYG1&currency=USD"></script>
 
     <script type="text/javascript">
       /// some script
