--- a/templates/orders/payments.html
+++ b/templates/orders/payments.html
@@ -97,7 +97,9 @@
             <p class="text-center mb-3">
               <img src="{% static './images/misc/payments.png' %}" height="26" />
             </p>
-            <a href="{% url 'payments' %}" class="btn btn-primary btn-block"> Make Payment </a>
+            <div id="paypal-button-container">
+              <!-- Paypal button will load -->
+            </div>
           </div>
           <!-- card-body.// -->
         </div>
@@ -111,4 +113,90 @@
   <!-- container .//  -->
 </section>
 <!-- ========================= SECTION CONTENT END// ========================= -->
+
+<script>
+  function getCookie(name) {
+    let cookieValue = null
+    if (document.cookie && document.cookie !== "") {
+      const cookies = document.cookie.split(";")
+      for (let i = 0; i < cookies.length; i++) {
+        const cookie = cookies[i].trim()
+        // Does this cookie string begin with the name we want?
+        if (cookie.substring(0, name.length + 1) === name + "=") {
+          cookieValue = decodeURIComponent(cookie.substring(name.length + 1))
+          break
+        }
+      }
+    }
+    return cookieValue
+  }
+
+  // hmmm this is not django template oo but seems it is working in the javascript
+  // these ones are coming from the model and the ones below are coming from paypal
+
+  var amount = "{{ grand_total }}"
+  var url = "{% url 'payments' %}"
+  var csrftoken = getCookie("csrftoken")
+  var orderID = "{{ order.order_number }}"
+  var payment_method = "Paypal"
+
+  // Render the PayPal button into #paypal-button-container
+  paypal
+    .Buttons({
+      style: {
+        color: "blue",
+        shape: "rect",
+        label: "pay",
+        height: 40,
+      },
+      // Set up the transaction (this is what the user sends or paypal accepts)
+      createOrder: function (data, actions) {
+        return actions.order.create({
+          purchase_units: [
+            {
+              amount: {
+                value: amount,
+              },
+            },
+          ],
+        })
+      },
+
+      // Finalize the transaction (this is the response from paypal)
+      onApprove: function (data, actions) {
+        return actions.order.capture().then(function (orderData) {
+          // Successful capture! For demo purposes:
+          console.log("Capture result", orderData, JSON.stringify(orderData, null, 2))
+          var transaction = orderData.purchase_units[0].payments.captures[0]
+          // alert("Transaction " + transaction.status + ": " + transaction.id + "\n\nSee console for all available details")
+          function sendData() {
+            fetch(url, {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+                "X-CSRFToken": csrftoken,
+              },
+              body: JSON.stringify({
+                orderID: orderID,
+                transID: orderData.id,
+                payment_method: payment_method,
+                status: orderData.status,
+              }),
+            })
+            // .then(response => response.json())
+            // .then(data => console.log(data))
+            // .catch(err => console.error(err))
+          }
+          sendData()
+
+          // Replace the above to show a success message within this page, e.g.
+          // const element = document.getElementById('paypal-button-container');
+          // element.innerHTML = '';
+          // element.innerHTML = '<h3>Thank you for your payment!</h3>';
+          // Or go to another URL:  actions.redirect('thank_you.html');
+        })
+      },
+    })
+    .render("#paypal-button-container")
+</script>
 {% endblock %}
