--- a/templates/orders/order_complete.html
+++ b/templates/orders/order_complete.html
@@ -60,7 +60,7 @@
                       <tr>
                         <th class="per70 text-center">Products</th>
                         <th class="per5 text-center">Qty</th>
-                        <th class="per25 text-center">Total</th>
+                        <th class="per25 text-center">Price</th>
                       </tr>
                     </thead>
                     <tbody>
