--- a/greatkart/static/css/custom.css
+++ b/greatkart/static/css/custom.css
@@ -38,3 +38,7 @@ input:checked ~ label:hover ~ label,
 label:hover ~ input:checked ~ label {
   color: #cc9000;
 }
+
+.rating-star i {
+  color: #cc9000 !important;
+}
